--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "connect-livereload": "^0.6.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "livereload": "^0.9.3",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
